# HourLang

./: .gitignore  CMakeLists.txt  README.MD  TODO.md  whattodo.md
BuiltinModules/: CMakeLists.txt
BuiltinModules/Math/: CMakeLists.txt  Math.cpp
BuiltinModules/Raylib/: CMakeLists.txt  Raylib.cpp  WrappedRaylib.cpp
examples/: boids.hc  brainf.hc  collatz.hc  fibonacci.hc  pong.hc  test.hc  test2.hc
libraries/: README.md
src/: Main.cpp  Types.hpp
src/AST/: AST.cpp  AST.hpp  ASTBuilder.cpp  ASTBuilder.hpp
src/Exceptions/: Exceptions.hpp
src/Globals/: Globals.cpp  Globals.hpp
src/Interpreter/: Interpreter.cpp  Interpreter.hpp
src/Modules/: LoadedModule.hpp
src/Modules/ExternalModule/: ExternalModule.hpp
src/Stack/: Stack.cpp  Stack.hpp
src/Stack/Function/: Function.cpp  Function.hpp
src/Stack/Scope/: Scope.cpp  Scope.hpp
src/Tokenizer/: Tokenizer.cpp  Tokenizer.hpp
src/Utility/: Conv.cpp  Conv.hpp  GetVarTypeString.cpp  GetVarTypeString.hpp  Math.cpp  Math.hpp  MultiLineManager.cpp  MultiLineManager.hpp  ReadFile.cpp  ReadFile.hpp  ReadTextFile.cpp  ReadTextFile.hpp
